--- a/style.css
+++ b/style.css
@@ -235,6 +235,15 @@ ul {
 }
 
 */
+#cross {
+    position: relative;
+    left: 360px;
+    top : 00px;
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+
 #audioContainer {
     display: flex;
     flex-direction: column;
@@ -280,6 +289,9 @@ li.active {
 }
 
 .tab-content.active {
+    position: relative;
+    top: 0px;
+    margin-top: 0px;
     display: block;
     background-color: #f0f0f0;
 }
@@ -300,5 +312,15 @@ li.active {
     justify-content: space-between;
     width: 50%;
     margin: auto;
+    margin-top: 10px;
+}
+
+#generalContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#generalContainer button {
     margin-top: 10px;
 }
