--- a/style.css
+++ b/style.css
@@ -234,6 +234,33 @@ select {
     width: 420px;
 }
 
+#achivement {
+    position: fixed;
+    top: 60px;
+    left: 50%;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    height: 40px;
+    width: 250px;
+}
+
+@keyframes drop {
+    0% {
+      top: -100px;
+    }
+    100% {
+        top: 60px;
+    }
+  }
+  
+  .achivement-animation {
+    animation: drop 1s ease;
+  }
+
+
+
 #buttonDiv {
     display: flex;
     flex-direction: row;
