--- a/style.css
+++ b/style.css
@@ -305,10 +305,21 @@ ul {
 }
 
 */
+#crossSuccess {
+    
+    position: absolute;
+    left: 635px;
+    top : 5px;
+
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+
 #cross {
     position: relative;
     left: 360px;
-    top : 00px;
+    top : 0px;
     height: 25px;
     width: 25px;
     cursor: pointer;
@@ -446,3 +457,33 @@ li.dark_active {
     animation: shake 0.5s ease infinite;
     color: red;
   }
+
+.successNotAchieved {
+    filter: grayscale(80%);
+}
+
+.successAchieved {
+    filter: grayscale(0%);
+}
+
+.successImg {
+    height: 100px;
+    width: 100px;
+    position: relative;
+    margin: 5px;
+}
+
+.successText {
+    margin-left: 5px;
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+}
+
+.successDiv {
+    display: flex;
+    flex-direction: row;
+    background-color: #333;
+    margin-bottom: 10px;
+    
+}
