--- a/style.css
+++ b/style.css
@@ -297,6 +297,17 @@ button {
     user-select: none;
 }
 
+
+.skillButton {
+    height: 300px;
+}
+
+.skillButton img {
+    height: 70px;
+    width: 70px;
+    user-select: none;
+}
+
 img {
     user-select: none;
 }
@@ -492,3 +503,18 @@ li.dark_active {
     margin-bottom: 10px;
     
 }
+
+.loading-circle {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: 
+    radial-gradient(closest-side, white 79%, transparent 80% 100%),
+    conic-gradient(hotpink 75%, pink 0);
+  }
+
+ 
+      
